Fixed layout problems with sidebar

--- a/static/css/dashboard_teacher.css
+++ b/static/css/dashboard_teacher.css
@@ -69,9 +69,10 @@ body{
     border: none;
     background: none;
     transition: 150ms;
+    cursor: pointer;
 }
-#sidebar-search-btn img{
-    height: 14px;
+#sidebar-search-btn:hover{
+    color: var(--accent10);
 }
 #sidebar-items, #special-sidebar-items{
     list-style-type: none;
@@ -93,11 +94,13 @@ body{
 }
 #sidebar-items li.sidebar-item i.fa, #special-sidebar-items li.sidebar-item i.fa{
     margin: 0 8px;
+    width: 25px;
 }
-#sidebar-items li.sidebar-item span.item-name #special-sidebar-items li.sidebar-item span.item-name{
+#sidebar-items li.sidebar-item span.item-name, #special-sidebar-items li.sidebar-item span.item-name{
     line-height: 24px;
     font-size: 17px;
     opacity: 1;
+    cursor: pointer;
 }
 #special-sidebar-items{
     position: absolute;
@@ -119,7 +122,8 @@ body{
 }
 #sidebar.collapsed #sidebar-items li.sidebar-item span.item-name, 
 #sidebar.collapsed #special-sidebar-items li.sidebar-item span.item-name{
-    display: none;
+    opacity: 0;
+    margin-left: 300px;
 }
 #sidebar.collapsed #sidebar-items li.sidebar-item,
 #sidebar.collapsed #special-sidebar-items li.sidebar-item{
@@ -132,6 +136,7 @@ body{
     margin: auto;
     line-height: 40px;
     font-size: 24px;
+    width: auto;
 }
 #workspace{
     position: fixed;
